--- a/WpfApp1/Fsponsor.xaml
+++ b/WpfApp1/Fsponsor.xaml
@@ -11,7 +11,10 @@
         <CollectionViewSource x:Key="dataTable1ViewSource" Source="{Binding DataTable1, Source={StaticResource marathonDataSet}}"/>
     </Window.Resources>
     <Grid>
-        <Grid Height="39" Margin="0,380,0,0" VerticalAlignment="Top" Background="Black" HorizontalAlignment="Left" Width="486">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Height="39" Margin="0,380,-2,0" VerticalAlignment="Top" Background="Black" HorizontalAlignment="Left" Width="486">
             <Label Content="18 дней 8 часов и 17 минут до старта марафона!" HorizontalAlignment="Left" Foreground="White" Margin="92,5,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.491,0.41" x:Name="LabelTime" Height="29"/>
         </Grid>
         <Grid HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="484" Background="Black">
@@ -34,7 +37,7 @@
             </Grid.RowDefinitions>
             <Label Content="Информация о спонсоре" Foreground="Gray" HorizontalAlignment="Center" FontSize="18" Width="240" FontWeight="Bold" Margin="0,0,0,33.333"/>
             <Label Content="Бегун:" HorizontalAlignment="Left" Margin="0,30.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-            <Label Content="Карта:" HorizontalAlignment="Left" Margin="0,56.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
+            <Label Content="Владелец" HorizontalAlignment="Left" Margin="0,56.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <Label Content="Номер карты#:" HorizontalAlignment="Left" Margin="0,82.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <Label Content="Срок действия:" HorizontalAlignment="Left" Margin="0,104.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <TextBox HorizontalAlignment="Left" Name="TboxName" Height="19" Margin="66,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="147" Grid.Row="1"/>
@@ -88,7 +91,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Label Content="Благотворительность" Foreground="Gray" HorizontalAlignment="Center" FontSize="18" Width="219" FontWeight="Bold" Margin="0,0,0,248"/>
-            <Label Content="Фонд Кошек" HorizontalAlignment="Left" Margin="50,41,0,0" VerticalAlignment="Top" FontSize="18"/>
+            <Label Content="Фонд Кошек" HorizontalAlignment="Left" Name="OrgName" Margin="10,44,0,0" VerticalAlignment="Top" FontSize="18"/>
             <Label Content="Сумма пожертвования" Foreground="Gray" HorizontalAlignment="Center" FontSize="18" Width="219" FontWeight="Bold" Margin="0,86,0,162"/>
             <Label Content="$50" Name="LPric" Foreground="Gray" HorizontalAlignment="Left" Margin="69,111,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="36" RenderTransformOrigin="0.5,0.5"/>
             <TextBox HorizontalAlignment="Left"  Height="29" Name="TboxPrice" Margin="58,169,0,0" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="100" TextAlignment="Center" FontSize="18"/>
@@ -96,7 +99,7 @@
             <Button Content="+" Click="Button_Click_1" HorizontalAlignment="Left" Margin="163,169,0,0" VerticalAlignment="Top" Width="43" Height="29"/>
             <Button Content="Заплатить" HorizontalAlignment="Left" Margin="10,219,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
             <Button Content="Отмена" HorizontalAlignment="Left" Margin="134,219,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
-            <Label Content="(i)" MouseDoubleClick="Label_MouseDoubleClick" HorizontalAlignment="Left" Margin="168,37,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.342,-0.385" FontSize="22"/>
+            <Label Content="(i)" MouseDoubleClick="Label_MouseDoubleClick" HorizontalAlignment="Left" Margin="180,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.342,-0.385" FontSize="22"/>
         </Grid>
         <Grid HorizontalAlignment="Left" Height="283" Margin="10,92,0,0" VerticalAlignment="Top" Width="240" DataContext="{StaticResource dataTable1ViewSource}">
             <Grid.RowDefinitions>
@@ -105,7 +108,6 @@
             </Grid.RowDefinitions>
             <Label Content="Информация о спонсоре" Foreground="Gray" HorizontalAlignment="Center" FontSize="18" Width="240" FontWeight="Bold" Margin="0,0,0,33.333"/>
             <Label Content="Бегун:" HorizontalAlignment="Left" Margin="0,30.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-            <Label Content="Карта:" HorizontalAlignment="Left" Margin="0,56.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <Label Content="Номер карты#:" HorizontalAlignment="Left" Margin="0,82.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <Label Content="Срок действия:" HorizontalAlignment="Left" Margin="0,104.667,0,0" VerticalAlignment="Top" Grid.Row="1"/>
             <TextBox HorizontalAlignment="Left" x:Name="TboxName1" Height="19" Margin="66,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="147" Grid.Row="1"/>
@@ -161,7 +163,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <ComboBox x:Name="expr1ComboBox" DisplayMemberPath="Expr1" HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="0,4,-12,2" Grid.Row="0" VerticalAlignment="Center" Width="147" Grid.ColumnSpan="2">
+                <ComboBox x:Name="expr1ComboBox" DropDownClosed="expr1ComboBox_DropDownClosed"  DisplayMemberPath="Expr1" HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="0,4,-12,2" Grid.Row="0" VerticalAlignment="Center" Width="147" Grid.ColumnSpan="2">
                     <ComboBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <VirtualizingStackPanel/>
