--- a/WpfApp1/Runner/RegisterAsARunner.xaml
+++ b/WpfApp1/Runner/RegisterAsARunner.xaml
@@ -33,7 +33,7 @@
         </Grid>
         <Grid HorizontalAlignment="Left" Height="191" Margin="10,92,0,0" VerticalAlignment="Top" Width="466">
             <Button Content="Я участвовал ранее" HorizontalAlignment="Left" Margin="80,20,0,0" VerticalAlignment="Top" Width="305" Height="67" FontSize="22"/>
-            <Button Content="Я новый участник" HorizontalAlignment="Left" Margin="80,106,0,0" VerticalAlignment="Top" Width="305" Height="67" FontSize="22"/>
+            <Button Content="Я новый участник" HorizontalAlignment="Left" Margin="80,106,0,0" VerticalAlignment="Top" Width="305" Height="67" FontSize="22" Click="Button_Click_1"/>
         </Grid>
     </Grid>
 </Window>
