--- a/Libra/Bolvanka.xaml
+++ b/Libra/Bolvanka.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp1.RunnerMenu"
+﻿<Window x:Class="WpfApp1.Bolvanka"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -30,16 +30,6 @@
         <Grid HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="484" Background="Black">
             <Button Content="Назад" Background="Gray"  HorizontalAlignment="Left" Margin="11,5,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.569,0.45" Click="Button_Click"/>
             <Label Content="MARATHON SKILLS 2020" Foreground="White" HorizontalAlignment="Left" Margin="158,2,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.149,-0.064"/>
-        </Grid>
-        <Grid HorizontalAlignment="Left" Height="51" Margin="10,36,0,0" VerticalAlignment="Top" Width="466">
-            <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Меню бегуна" TextAlignment="Center" IsEnabled="False" VerticalAlignment="Top" Height="38" Width="446" FontSize="22"/>
-        </Grid>
-        <Grid HorizontalAlignment="Left" Height="273" Margin="10,92,0,0" VerticalAlignment="Top" Width="466">
-            <Button Content="Регистрация на марафон" HorizontalAlignment="Left" Margin="36,21,0,0" VerticalAlignment="Top" Width="165" Height="70" Click="Button_Click_4"/>
-            <Button Content="Редактирование профиля" HorizontalAlignment="Left" Margin="36,98,0,0" VerticalAlignment="Top" Width="165" Height="70" Click="Button_Click_3"/>
-            <Button Content="Контакты" HorizontalAlignment="Left" Margin="36,173,0,0" VerticalAlignment="Top" Width="165" Height="70" Click="Button_Click_1"/>
-            <Button Content="Мои результаты" HorizontalAlignment="Left" Margin="271,21,0,0" VerticalAlignment="Top" Width="165" Height="70" Click="Button_Click_2"/>
-            <Button Content="Мой спонсор" HorizontalAlignment="Left" Margin="271,98,0,0" VerticalAlignment="Top" Width="165" Height="70"/>
         </Grid>
     </Grid>
 </Window>
