--- a/WpfApp1/Runner/NewRunner.xaml
+++ b/WpfApp1/Runner/NewRunner.xaml
@@ -43,11 +43,11 @@
             <Label Content="Повтор пароля:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
             <Label Content="Имя" HorizontalAlignment="Left" Margin="74,103,0,0" VerticalAlignment="Top" RenderTransformOrigin="2.271,0.449"/>
             <Label Content="Фамилия" HorizontalAlignment="Left" Margin="46,134,0,0" VerticalAlignment="Top"/>
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="106,14,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="106,45,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="106,76,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="106,107,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-            <TextBox HorizontalAlignment="Left" Height="23" Margin="106,138,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+            <TextBox HorizontalAlignment="Left" Name="TboxMail" Height="23" Margin="106,14,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+            <TextBox HorizontalAlignment="Left" Name="TboxPass" Height="23" Margin="106,45,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+            <TextBox HorizontalAlignment="Left" Name="TboxPassPodtv" Height="23" Margin="106,76,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+            <TextBox HorizontalAlignment="Left" Name="TboxFirstName" Height="23" Margin="106,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <TextBox HorizontalAlignment="Left" Name="TboxSecondName" Height="23" Margin="106,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
             <Grid x:Name="grid2" DataContext="{StaticResource genderViewSource}" HorizontalAlignment="Left" Margin="62,165,0,0" VerticalAlignment="Top">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -66,10 +66,10 @@
                 </ComboBox>
             </Grid>
             <Image HorizontalAlignment="Left" Name="foto" Height="109" Margin="293,10,0,0" VerticalAlignment="Top" Width="110"/>
-            <TextBox Name="fotoname" HorizontalAlignment="Left" Height="23" Margin="256,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+            <TextBox Name="fotoname" HorizontalAlignment="Left" Height="23" Margin="256,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsEnabled="False"/>
             <Button Content="Просмотр" HorizontalAlignment="Left" Margin="381,124,0,0" VerticalAlignment="Top" Width="75" Height="23" Click="Button_Click_1"/>
             <Label Content="Дата Рождения" HorizontalAlignment="Left" Margin="256,152,0,0" VerticalAlignment="Top"/>
-            <DatePicker HorizontalAlignment="Left" Margin="355,154,0,0" VerticalAlignment="Top" Width="101"/>
+            <DatePicker Name="DateOfbirth" HorizontalAlignment="Left" Margin="355,154,0,0" VerticalAlignment="Top" Width="101"/>
             <Grid x:Name="grid3" DataContext="{StaticResource countryViewSource}" HorizontalAlignment="Left" Margin="243,201,0,-3" VerticalAlignment="Top">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -107,6 +107,8 @@
                     </ComboBox.ItemsPanel>
                 </ComboBox>
             </Grid>
+            <Button Content="Регистрация" HorizontalAlignment="Left" Margin="52,200,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+            <Button Content="Отмена" HorizontalAlignment="Left" Margin="148,200,0,0" VerticalAlignment="Top" Width="75"/>
         </Grid>
     </Grid>
 </Window>
