--- a/WpfApp1/Runner/RegistrationConfirmation.xaml
+++ b/WpfApp1/Runner/RegistrationConfirmation.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp1.Bolvanka"
+﻿<Window x:Class="WpfApp1.RegistrationConfirmation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,9 +8,8 @@
         Title="MainWindow" Height="434.667" Width="494" Loaded="Window_Loaded" >
     <Window.Resources>
         <local:marathonDataSet x:Key="marathonDataSet"/>
-
     </Window.Resources>
-    <Grid  Margin="0,-2,0,2">
+    <Grid Margin="0,-2,0,2">
         <Grid.RowDefinitions>
             <RowDefinition/>
         </Grid.RowDefinitions>
@@ -30,5 +29,8 @@
             <Button Content="Назад" Background="Gray"  HorizontalAlignment="Left" Margin="11,5,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.569,0.45" Click="Button_Click"/>
             <Label Content="MARATHON SKILLS 2020" Foreground="White" HorizontalAlignment="Left" Margin="158,2,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.149,-0.064"/>
         </Grid>
+        <TextBlock HorizontalAlignment="Left" Margin="10,36,0,0" IsEnabled="False" TextWrapping="Wrap" Text="Спасибо за вашу регистрацию в качестве бегуна!" TextAlignment="Center" Foreground="Gray" VerticalAlignment="Top" Height="70" Width="466" FontSize="22" FontWeight="Bold"/>
+        <TextBlock HorizontalAlignment="Left" Margin="10,106,0,0" TextWrapping="Wrap" Text="Спасибо за вашу регистрацию в качестве бегуна на соревнованиях, с вами свяжутся по поводу оплаты." TextAlignment="Center" Foreground="Gray" VerticalAlignment="Top" Height="101" Width="466" FontSize="24"/>
+        <Button Content="ОК" x:Name="OK" Click="Button_Click" HorizontalAlignment="Left" Margin="189,212,0,0" VerticalAlignment="Top" Width="112" RenderTransformOrigin="0.387,0.973" Height="42"/>
     </Grid>
 </Window>
