--- a/WpfApp1/Marathon/PonrInfa.xaml
+++ b/WpfApp1/Marathon/PonrInfa.xaml
@@ -12,10 +12,22 @@
         <CollectionViewSource x:Key="staffViewSource" Source="{Binding Staff, Source={StaticResource marathonDataSet}}"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource staffViewSource}" Margin="0,-2,0,2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="55*"/>
+            <ColumnDefinition Width="143*"/>
+            <ColumnDefinition Width="33*"/>
+            <ColumnDefinition Width="148*"/>
+            <ColumnDefinition Width="107*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="86*"/>
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="73*"/>
+            <RowDefinition Height="72*"/>
+            <RowDefinition Height="27*"/>
         </Grid.RowDefinitions>
-        <Grid x:Name="grid1" DataContext="{StaticResource marathonViewSource}" HorizontalAlignment="Left" Margin="354,135,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.394,-1.641" Height="0" Width="0">
+        <Grid x:Name="grid1" DataContext="{StaticResource marathonViewSource}" HorizontalAlignment="Left" Margin="118,46,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.394,-1.641" Height="0" Width="0" Grid.Column="3" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
@@ -24,24 +36,24 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
         </Grid>
-        <Grid Height="32" Margin="0,368,0,0" VerticalAlignment="Top" Background="Black">
+        <Grid Height="32" Margin="0,2.843,0,-8" VerticalAlignment="Top" Background="Black" Grid.ColumnSpan="5" Grid.Row="5">
             <Label Content="18 дней 8 часов и 17 минут до старта марафона!" HorizontalAlignment="Left" Foreground="White" Margin="92,5,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.491,0.41" Name="LabelTime" Height="29"/>
         </Grid>
-        <Grid HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="484" Background="Black">
+        <Grid HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="484" Background="Black" Grid.ColumnSpan="5">
             <Button Content="Назад" Background="Gray"  HorizontalAlignment="Left" Margin="11,5,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.569,0.45" Click="Button_Click"/>
             <Label Content="MARATHON SKILLS 2020" Foreground="White" HorizontalAlignment="Left" Margin="158,2,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.149,-0.064"/>
         </Grid>
-        <TextBlock IsEnabled="False" TextAlignment="Center" Foreground="Gray" HorizontalAlignment="Left" Margin="10,36,0,0" TextWrapping="Wrap" Text="подробная информация" VerticalAlignment="Top" Height="29" Width="466" FontSize="22"/>
-        <Button Content="Marathon skills 2020" HorizontalAlignment="Left" Margin="56,96,0,0" VerticalAlignment="Top" Width="144" Height="65"/>
-        <Button Content="Bmi калькулятор" HorizontalAlignment="Left" Margin="56,236,0,0" VerticalAlignment="Top" Width="144" Height="65" FontSize="16"/>
-        <Button Margin="56,166,286,173">
+        <TextBlock IsEnabled="False" TextAlignment="Center" Foreground="Gray" HorizontalAlignment="Left" Margin="10,36,0,0" TextWrapping="Wrap" Text="подробная информация" VerticalAlignment="Top" Height="29" Width="466" FontSize="22" Grid.ColumnSpan="5"/>
+        <Button Click="Button_Click_3" Content="Marathon skills 2020" Grid.Column="1" Grid.Row="1"/>
+        <Button Content="Bmi калькулятор" Margin="0,0,1,2" FontSize="16" Grid.Column="1" Grid.Row="3"/>
+        <Button Margin="1,0" Grid.Column="1" Grid.Row="2">
             <TextBlock TextAlignment="Center" TextWrapping="Wrap" FontSize="16"> предыдущие результаты</TextBlock>
         </Button>
-        <Button Content="BMR калькулятор" HorizontalAlignment="Left" Margin="235,236,0,0" VerticalAlignment="Top" Width="144" Height="65" FontSize="16"/>
-        <Button Margin="235,166,107,173" Click="Button_Click_1">
+        <Button Content="BMR калькулятор" Margin="0,1,0,2" FontSize="16" Grid.Column="3" Grid.Row="3"/>
+        <Button Click="Button_Click_1" Grid.Column="3" Grid.Row="2">
             <TextBlock TextAlignment="Center" TextWrapping="Wrap" FontSize="14"><Run Text="Список благотворительных организаций"/></TextBlock>
         </Button>
-        <Button Margin="235,96,107,243">
+        <Button Click="Button_Click_2" Grid.Column="3" Grid.Row="1">
             <TextBlock TextAlignment="Center" TextWrapping="Wrap" FontSize="16"><Run Text="Насколько долгий марафон"/></TextBlock>
         </Button>
     </Grid>
