--- a/WpfApp1/Admin/Inventory.xaml
+++ b/WpfApp1/Admin/Inventory.xaml
@@ -93,5 +93,6 @@
         <Image Name="Img4" Grid.Column="1" Grid.Row="4"/>
         <Image Name="Img5" Grid.Column="2" Grid.Row="3"/>
         <Image Name="Img6" Grid.Column="2" Grid.Row="4"/>
+        <Button Content="Поступление" Grid.Column="3" HorizontalAlignment="Left" Margin="138,77,0,0" Grid.Row="5" VerticalAlignment="Top" Width="91" Click="Button_Click_1"/>
     </Grid>
 </Window>
