--- a/WpfApp1/Window1.xaml
+++ b/WpfApp1/Window1.xaml
@@ -5,19 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800" Loaded="Window_Loaded">
+        Title="Window1" Height="450" Width="1208.864" Loaded="Window_Loaded">
     <Window.Resources>
         <local:marathonDataSet x:Key="marathonDataSet"/>
+        <CollectionViewSource x:Key="volonter1ViewSource" Source="{Binding Volonter1, Source={StaticResource marathonDataSet}}"/>
         <CollectionViewSource x:Key="charityViewSource" Source="{Binding Charity, Source={StaticResource marathonDataSet}}"/>
-        <CollectionViewSource x:Key="dataTable3ViewSource" Source="{Binding DataTable3, Source={StaticResource marathonDataSet}}"/>
+        <CollectionViewSource x:Key="volunteerViewSource" Source="{Binding Volunteer, Source={StaticResource marathonDataSet}}"/>
     </Window.Resources>
-    <Grid DataContext="{StaticResource charityViewSource}">
-        <DataGrid x:Name="dataTable3DataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource dataTable3ViewSource}}" Margin="164,116,228,103" RowDetailsVisibilityMode="VisibleWhenSelected">
+    <Grid DataContext="{StaticResource volonter1ViewSource}" >
+        <DataGrid x:Name="charityDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding Source={StaticResource charityViewSource}}" Margin="10,215,0,4" RowDetailsVisibilityMode="VisibleWhenSelected" HorizontalAlignment="Left" Width="400">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="runnerIdColumn" Binding="{Binding RunnerId}" Header="Runner Id" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="eventNameColumn" Binding="{Binding EventName}" Header="Event Name" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="raceTimeColumn" Binding="{Binding RaceTime}" Header="Race Time" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="dataColumn1Column" Binding="{Binding DataColumn1}" Header="Data Column 1" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="charityIdColumn" Binding="{Binding CharityId}" Header="Charity Id" IsReadOnly="True" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="charityNameColumn" Binding="{Binding CharityName}" Header="Charity Name" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="charityDescriptionColumn" Binding="{Binding CharityDescription}" Header="Charity Description" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="charityLogoColumn" Binding="{Binding CharityLogo}" Header="Charity Logo" Width="SizeToHeader"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid x:Name="volonter1DataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" Margin="10,10,791,209" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="firstNameColumn" Binding="{Binding FirstName}" Header="First Name" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="lastNameColumn" Binding="{Binding LastName}" Header="Last Name" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="countryNameColumn" Binding="{Binding CountryName}" Header="Country Name" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="genderColumn" Binding="{Binding Gender}" Header="Gender" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
