--- a/WpfApp1/Coordinator/CoordinatorMenu.xaml
+++ b/WpfApp1/Coordinator/CoordinatorMenu.xaml
@@ -33,7 +33,7 @@
         </Grid>
         <TextBlock HorizontalAlignment="Left" Margin="10,36,0,0" TextWrapping="Wrap" Text="Меню Координатора" TextAlignment="Center" IsEnabled="False"  VerticalAlignment="Top" Height="37" Width="466" FontSize="22"/>
         <Grid HorizontalAlignment="Left" Height="287" Margin="10,78,0,0" VerticalAlignment="Top" Width="466">
-            <Button Content="Бегуны" HorizontalAlignment="Left" Margin="46,21,0,0" VerticalAlignment="Top" Width="160" Height="69" FontSize="20"/>
+            <Button Content="Бегуны" Click="Button_Click_2" HorizontalAlignment="Left" Margin="46,21,0,0" VerticalAlignment="Top" Width="160" Height="69" FontSize="20"/>
             <Button Content="Спонсоры" HorizontalAlignment="Left" Margin="252,21,0,0" VerticalAlignment="Top" Width="160" Height="69" FontSize="20"/>
         </Grid>
     </Grid>
