--- a/WpfApp1/Coordinator/Listik.xaml
+++ b/WpfApp1/Coordinator/Listik.xaml
@@ -1,19 +1,12 @@
-﻿<Window x:Class="WpfApp1.List"
+﻿<Window x:Class="WpfApp1.Listik"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="List" Height="450" Width="800">
+        Title="Listik" Height="450" Width="800">
     <Grid>
-        <ListView HorizontalAlignment="Left" Name="ListListView" Height="399" Margin="10,10,0,0" VerticalAlignment="Top" Width="772">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
+        <TextBox HorizontalAlignment="Left" x:Name="Tbox1" Height="399" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="772"/>
     </Grid>
 </Window>
