--- a/WpfApp1/Coordinator/RunnerManagement.xaml
+++ b/WpfApp1/Coordinator/RunnerManagement.xaml
@@ -39,17 +39,29 @@
             <Label Content="18 дней 8 часов и 17 минут до старта марафона!" HorizontalAlignment="Left" Foreground="White" Margin="92,3,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.491,0.41" Name="LabelTime" Height="29" Grid.Row="1" Width="278"/>
         </Grid>
         <Grid HorizontalAlignment="Left" Width="484" Background="Black" Margin="0,0,0,1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
             <Button Content="Назад" Background="Gray"  HorizontalAlignment="Left" Margin="11,5,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.569,0.45" Click="Button_Click"/>
             <Label Content="MARATHON SKILLS 2020" Foreground="White" Margin="158,2,184,3" RenderTransformOrigin="-0.149,-0.064"/>
         </Grid>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Управление бегунами"  Foreground="Gray" TextAlignment="Center" IsEnabled="False" VerticalAlignment="Top" Width="466" FontSize="20" Height="27"/>
         <Grid Margin="10,3,10,39" Grid.Row="2" DataContext="{StaticResource runnerManagViewSource}">
-            <DataGrid x:Name="runnerManagDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected">
+            <DataGrid SelectionUnit="FullRow" x:Name="runnerManagDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" ItemsSource="{Binding}" RowDetailsVisibilityMode="VisibleWhenSelected">
                 <DataGrid.Columns>
                     <DataGridTextColumn x:Name="firstNameColumn" Binding="{Binding FirstName}" Header="First Name" Width="SizeToHeader"/>
                     <DataGridTextColumn x:Name="lastNameColumn" Binding="{Binding LastName}" Header="Last Name" Width="SizeToHeader"/>
-                    <DataGridTextColumn x:Name="emailColumn" Binding="{Binding Email}" Header="Email" Width="SizeToCells"/>
+
                     <DataGridTextColumn x:Name="registrationStatusColumn" Binding="{Binding RegistrationStatus}" Header="Registration Status" Width="SizeToHeader"/>
+                    <DataGridTemplateColumn x:Name="emailColumn"  Header="редактировать" Width="SizeToCells">
+                        <DataGridTemplateColumn.CellTemplate >
+                            <DataTemplate>
+                                <Button x:Name="EmailButton"  Click="EditButton_Click" Content="{Binding Email}">
+
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
@@ -86,7 +98,7 @@
                 </Grid.RowDefinitions>
                 <Label Content="Дистанция:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="0" VerticalAlignment="Center"/>
                 <ComboBox x:Name="eventTypeNameComboBox" DropDownClosed="eventTypeNameComboBox_DropDownClosed" Grid.Column="1" DisplayMemberPath="EventTypeName" HorizontalAlignment="Left" Height="Auto" ItemsSource="{Binding}" Margin="3" Grid.Row="0" VerticalAlignment="Center" Width="120">
-                    <ComboBox.ItemsPanel> 
+                    <ComboBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <VirtualizingStackPanel/>
                         </ItemsPanelTemplate>
