--- a/WpfApp1/Total/Login.xaml
+++ b/WpfApp1/Total/Login.xaml
@@ -41,7 +41,7 @@
             <Label Content="Password:" HorizontalAlignment="Left" Margin="54,58,0,0" VerticalAlignment="Top" Height="34" Width="104" FontSize="16"/>
             <TextBox HorizontalAlignment="Left" Name="TboxMail" Height="30" Margin="158,17,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="199"/>
             <TextBox HorizontalAlignment="Left" Name="TboxPass" Height="30" Margin="158,62,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="199"/>
-            <Button Content="Login" Click="Button_Click_1" HorizontalAlignment="Left" Margin="158,119,0,0" VerticalAlignment="Top" Width="95" Height="24"/>
+            <Button Content="Login" Click="Button_Click_1" HorizontalAlignment="Left" Margin="158,119,0,3" Width="95"/>
             <Button Content="Cancel" HorizontalAlignment="Left" Margin="262,119,0,0" VerticalAlignment="Top" Width="95" RenderTransformOrigin="0.764,0.037" Height="24"/>
         </Grid>
     </Grid>
